--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -1,4 +1,6 @@
 name: AZ-400 Team approval workflow
-
 on: pull_request_review
-
+jobs:
+  labelWhenApproved:
+    runs-on: ubuntu-latest
+on: pull_request_review
